--- a/colibre/auto_plotter/black_holes.yml
+++ b/colibre/auto_plotter/black_holes.yml
@@ -196,7 +196,7 @@ ssfr_rate_black_hole_mass_30:
   legend_loc: "upper right"
   select_structure_type: 10
   selection_mask: "derived_quantities.stellar_mass_is_bigger_than_1e10_msun_30_kpc"
-  comment: "Centrals only, $M_* > 10^{10}\Msun$"
+  comment: "Centrals only, $M_* > 10^{10}$ solar masses"
   redshift_loc: "lower left"
   x:
     quantity: "black_hole_masses.max"
@@ -232,7 +232,7 @@ ssfr_rate_black_hole_mass_50:
   legend_loc: "upper right"
   select_structure_type: 10
   selection_mask: "derived_quantities.stellar_mass_is_bigger_than_1e10_msun_50_kpc"
-  comment: "Centrals only, $M_* > 10^{10}\Msun$"
+  comment: "Centrals only, $M_* > 10^{10}$ solar masses"
   redshift_loc: "lower left"
   x:
     quantity: "black_hole_masses.max"
