Add the Thorne+21 GSMF data to the colibre pipeline

--- a/colibre/auto_plotter/mass_functions.yml
+++ b/colibre/auto_plotter/mass_functions.yml
@@ -25,6 +25,7 @@ stellar_mass_function_30:
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_30kpc.hdf5
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
 
 adaptive_stellar_mass_function_30:
   type: "adaptivemassfunction"
@@ -53,6 +54,7 @@ adaptive_stellar_mass_function_30:
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_30kpc.hdf5
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
 
 adaptive_stellar_mass_function_active_only_30:
   type: "adaptivemassfunction"
@@ -83,6 +85,7 @@ adaptive_stellar_mass_function_active_only_30:
     - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_30kpc.hdf5
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
 
 adaptive_stellar_mass_function_passive_only_30:
   type: "adaptivemassfunction"
@@ -114,7 +117,7 @@ adaptive_stellar_mass_function_passive_only_30:
     - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_30kpc.hdf5
-
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
 
 stellar_mass_function_50:
   type: "massfunction"
@@ -142,6 +145,7 @@ stellar_mass_function_50:
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
 
 adaptive_stellar_mass_function_50:
   type: "adaptivemassfunction"
@@ -169,6 +173,7 @@ adaptive_stellar_mass_function_50:
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
 
 adaptive_stellar_mass_function_50_box_size_correction:
   type: "adaptivemassfunction"
@@ -197,6 +202,7 @@ adaptive_stellar_mass_function_50_box_size_correction:
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
 
 adaptive_stellar_mass_function_passive_only_50:
   type: "massfunction"
@@ -227,6 +233,7 @@ adaptive_stellar_mass_function_passive_only_50:
     - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
 
 adaptive_stellar_mass_function_active_only_50:
   type: "adaptivemassfunction"
@@ -256,6 +263,7 @@ adaptive_stellar_mass_function_active_only_50:
     - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
 
 stellar_mass_function_with_scatter_50:
   type: "massfunction"
@@ -284,6 +292,7 @@ stellar_mass_function_with_scatter_50:
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
 
 adaptive_stellar_mass_function_with_scatter_50:
   type: "adaptivemassfunction"
@@ -312,3 +321,4 @@ adaptive_stellar_mass_function_with_scatter_50:
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
+    - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
