--- a/colibre/auto_plotter/snia_rates.yml
+++ b/colibre/auto_plotter/snia_rates.yml
@@ -9,7 +9,7 @@ stellar_mass_snia_rates_50:
   y:
     quantity: "snia_rates.snia_rates_50_kpc"
     units: "1/year"
-    start: 1e-8
+    start: 3e-8
     end: 1e-1
   median:
     plot: true
@@ -26,6 +26,68 @@ stellar_mass_snia_rates_50:
     title: Stellar Mass-SNIa rate relation (50 kpc aperture)
     caption: Uses a 50 kpc 3D aperture.
     section: SNIa Rate
+  observational_data:
+    - filename: GalaxyStellarMassSNIaRate/Wiseman2021.hdf5
+
+stellar_mass_snia_rates_active_only_50:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.is_active_50_kpc"
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e6
+    end: 1e12
+  y:
+    quantity: "snia_rates.snia_rates_50_kpc"
+    units: "1/year"
+    start: 3e-8
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e6
+      units: Solar_Mass
+    end:
+      value: 1e12
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-SNIa rate relation (active only, 50 kpc aperture)
+    caption: Uses a 50 kpc 3D aperture and only active galaxies.
+    section: SNIa Rate
+
+stellar_mass_snia_rates_passive_only_50:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.is_passive_50_kpc"
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e6
+    end: 1e12
+  y:
+    quantity: "snia_rates.snia_rates_50_kpc"
+    units: "1/year"
+    start: 3e-8
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e6
+      units: Solar_Mass
+    end:
+      value: 1e12
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-SNIa rate relation (passive only, 50 kpc aperture)
+    caption: Uses a 50 kpc 3D aperture and only passive galaxies.
+    section: SNIa Rate
 
 stellar_mass_snia_rates_per_stellar_mass_50:
   type: "scatter"
@@ -38,8 +100,8 @@ stellar_mass_snia_rates_per_stellar_mass_50:
   y:
     quantity: "derived_quantities.snia_rate_per_stellar_mass_50_kpc"
     units: "1/year/Solar_Mass"
-    start: 1e-15
-    end: 1e-11
+    start: 3e-15
+    end: 3e-12
   median:
     plot: true
     log: true
@@ -55,6 +117,10 @@ stellar_mass_snia_rates_per_stellar_mass_50:
     title: Stellar Mass-SNIa rate per stellar mass relation (50 kpc aperture)
     caption: Uses a 50 kpc 3D aperture.
     section: SNIa Rate
+  observational_data:
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Wiseman2021.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2015.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Kistler2014.hdf5
 
 stellar_mass_snia_rates_per_stellar_mass_active_only_50:
   type: "scatter"
@@ -68,8 +134,8 @@ stellar_mass_snia_rates_per_stellar_mass_active_only_50:
   y:
     quantity: "derived_quantities.snia_rate_per_stellar_mass_50_kpc"
     units: "1/year/Solar_Mass"
-    start: 1e-15
-    end: 1e-11
+    start: 3e-15
+    end: 3e-12
   median:
     plot: true
     log: true
@@ -85,6 +151,8 @@ stellar_mass_snia_rates_per_stellar_mass_active_only_50:
     title: Stellar Mass-SNIa rate per stellar mass relation (active only, 50 kpc aperture)
     caption: Uses a 50 kpc 3D aperture.
     section: SNIa Rate
+  observational_data:
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2015_SF.hdf5
 
 stellar_mass_snia_rates_per_stellar_mass_passive_only_50:
   type: "scatter"
@@ -98,8 +166,8 @@ stellar_mass_snia_rates_per_stellar_mass_passive_only_50:
   y:
     quantity: "derived_quantities.snia_rate_per_stellar_mass_50_kpc"
     units: "1/year/Solar_Mass"
-    start: 1e-15
-    end: 1e-11
+    start: 3e-15
+    end: 3e-12
   median:
     plot: true
     log: true
@@ -115,20 +183,23 @@ stellar_mass_snia_rates_per_stellar_mass_passive_only_50:
     title: Stellar Mass-SNIa rate per stellar mass relation (passive only, 50 kpc aperture)
     caption: Uses a 50 kpc 3D aperture.
     section: SNIa Rate
+  observational_data:
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2015_passive.hdf5
 
 gas_metallicity_snia_rates_per_stellar_mass_active_only_50:
   type: "scatter"
   legend_loc: "upper left"
-  selection_mask: "derived_quantities.is_active_50_kpc"
+  selection_mask: "derived_quantities.stellar_mass_is_bigger_than_5e10_msun_active_50_kpc"
   x:
     quantity: "derived_quantities.gas_o_abundance_fromz_avglin_50_kpc"
     units: dimensionless 
-    start: 8.2 
-    end: 9.5 
+    log: false
+    start: 8.4 
+    end: 9.4 
   y:
     quantity: "derived_quantities.snia_rate_per_stellar_mass_50_kpc"
     units: "1/year/Solar_Mass"
-    start: 1e-15
+    start: 1e-14
     end: 1e-11
   median:
     plot: true
@@ -142,13 +213,16 @@ gas_metallicity_snia_rates_per_stellar_mass_active_only_50:
       value: 9.5 
       units: dimensionless 
   metadata:
-    title: Gas metallicity-SNIa rate per stellar mass relation (50 kpc aperture)
-    caption: Uses a 50 kpc 3D aperture.
+    title: Gas metallicity-SNIa rate per stellar mass relation (active only, 50 kpc aperture)
+    caption: Uses a 50 kpc 3D aperture, active galaxies only.
     section: SNIa Rate
+  observational_data:
+    - filename: GalaxyGasMetallicitySNIaRatePerStellarMass/Graur2017.hdf5
 
 star_formation_rates_snia_rates_per_stellar_mass_50:
   type: "scatter"
   legend_loc: "upper left"
+  selection_mask: "derived_quantities.stellar_mass_is_bigger_than_5e10_msun_50_kpc"
   x:
     quantity: "apertures.sfr_gas_50_kpc"
     units: "Solar_Mass/year"
@@ -157,8 +231,8 @@ star_formation_rates_snia_rates_per_stellar_mass_50:
   y:
     quantity: "derived_quantities.snia_rate_per_stellar_mass_50_kpc"
     units: "1/year/Solar_Mass"
-    start: 1e-15
-    end: 1e-11
+    start: 1e-14
+    end: 3e-12
   median:
     plot: true
     log: true
@@ -172,12 +246,16 @@ star_formation_rates_snia_rates_per_stellar_mass_50:
       units: "Solar_Mass/year"
   metadata:
     title: SFR-SNIa rate per stellar mass relation (50 kpc aperture)
-    caption: Uses a 50 kpc 3D aperture.
+    caption: Uses a 50 kpc 3D aperture, only select galaxies with a stellar mass above 5x1e10 Msun.
     section: SNIa Rate
+  observational_data:
+    - filename: StarFormationRateSNIaRatePerStellarMass/Graur2015.hdf5
+    - filename: StarFormationRateSNIaRatePerStellarMass/Graur2017.hdf5
 
 specific_star_formation_rates_snia_rates_per_stellar_mass_50:
   type: "scatter"
   legend_loc: "upper left"
+  selection_mask: "derived_quantities.stellar_mass_is_bigger_than_5e10_msun_50_kpc"
   x:
     quantity: "derived_quantities.specific_sfr_gas_50_kpc"
     units: "1/gigayear"
@@ -186,8 +264,8 @@ specific_star_formation_rates_snia_rates_per_stellar_mass_50:
   y:
     quantity: "derived_quantities.snia_rate_per_stellar_mass_50_kpc"
     units: "1/year/Solar_Mass"
-    start: 1e-15
-    end: 1e-11
+    start: 1e-14
+    end: 3e-12
   median:
     plot: true
     log: true
@@ -203,6 +281,9 @@ specific_star_formation_rates_snia_rates_per_stellar_mass_50:
     title: sSFR-SNIa rate per stellar mass relation (50 kpc aperture)
     caption: Uses a 50 kpc 3D aperture.
     section: SNIa Rate
+  observational_data:
+    - filename: SpecificStarFormationRateSNIaRatePerStellarMass/Graur2015.hdf5
+    - filename: SpecificStarFormationRateSNIaRatePerStellarMass/Graur2017.hdf5
 
 stellar_mass_snia_rates_30:
   type: "scatter"
@@ -233,6 +314,8 @@ stellar_mass_snia_rates_30:
     caption: Uses a 30 kpc 3D aperture.
     section: SNIa Rate
     show_on_webpage: false
+  observational_data:
+    - filename: GalaxyStellarMassSNIaRate/Wiseman2021.hdf5
 
 stellar_mass_snia_rates_per_stellar_mass_30:
   type: "scatter"
@@ -263,6 +346,10 @@ stellar_mass_snia_rates_per_stellar_mass_30:
     caption: Uses a 30 kpc 3D aperture.
     section: SNIa Rate
     show_on_webpage: false
+  observational_data:
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Wiseman2021.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2015.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Kistler2014.hdf5
 
 stellar_mass_snia_rates_100:
   type: "scatter"
@@ -293,6 +380,8 @@ stellar_mass_snia_rates_100:
     caption: Uses a 30 kpc 3D aperture.
     section: SNIa Rate
     show_on_webpage: false
+  observational_data:
+    - filename: GalaxyStellarMassSNIaRate/Wiseman2021.hdf5
 
 stellar_mass_snia_rates_per_stellar_mass_100:
   type: "scatter"
@@ -323,3 +412,7 @@ stellar_mass_snia_rates_per_stellar_mass_100:
     caption: Uses a 30 kpc 3D aperture.
     section: SNIa Rate
     show_on_webpage: false
+  observational_data:
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Wiseman2021.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2015.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Kistler2014.hdf5
