--- a/colibre/auto_plotter/snia_rates.yml
+++ b/colibre/auto_plotter/snia_rates.yml
@@ -31,6 +31,8 @@ stellar_mass_snia_rates_50:
 
 stellar_mass_snia_rates_active_only_50:
   type: "scatter"
+  comment: "Active only"
+  comment_loc: "lower left"
   legend_loc: "upper left"
   selection_mask: "derived_quantities.is_active_50_kpc"
   x:
@@ -58,9 +60,13 @@ stellar_mass_snia_rates_active_only_50:
     title: Stellar Mass-SNIa rate relation (active only, 50 kpc aperture)
     caption: Uses a 50 kpc 3D aperture and only active galaxies.
     section: SNIa Rate
+  observational_data:
+    - filename: GalaxyStellarMassSNIaRate/Smith2012_active.hdf5
 
 stellar_mass_snia_rates_passive_only_50:
   type: "scatter"
+  comment: "Passive only"
+  comment_loc: "lower left"
   legend_loc: "upper left"
   selection_mask: "derived_quantities.is_passive_50_kpc"
   x:
@@ -88,6 +94,8 @@ stellar_mass_snia_rates_passive_only_50:
     title: Stellar Mass-SNIa rate relation (passive only, 50 kpc aperture)
     caption: Uses a 50 kpc 3D aperture and only passive galaxies.
     section: SNIa Rate
+  observational_data:
+    - filename: GalaxyStellarMassSNIaRate/Smith2012_passive.hdf5
 
 stellar_mass_snia_rates_per_stellar_mass_50:
   type: "scatter"
@@ -118,12 +126,15 @@ stellar_mass_snia_rates_per_stellar_mass_50:
     caption: Uses a 50 kpc 3D aperture.
     section: SNIa Rate
   observational_data:
-    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Wiseman2021.hdf5
-    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2015.hdf5
     - filename: GalaxyStellarMassSNIaRatePerStellarMass/Kistler2014.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2015.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2017.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Wiseman2021.hdf5
 
 stellar_mass_snia_rates_per_stellar_mass_active_only_50:
   type: "scatter"
+  comment: "Active only"
+  comment_loc: "lower left"
   legend_loc: "upper left"
   selection_mask: "derived_quantities.is_active_50_kpc"
   x:
@@ -152,10 +163,14 @@ stellar_mass_snia_rates_per_stellar_mass_active_only_50:
     caption: Uses a 50 kpc 3D aperture.
     section: SNIa Rate
   observational_data:
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Smith2012_active.hdf5
     - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2015_SF.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2017_active.hdf5
 
 stellar_mass_snia_rates_per_stellar_mass_passive_only_50:
   type: "scatter"
+  comment: "Passive only"
+  comment_loc: "lower left"
   legend_loc: "upper left"
   selection_mask: "derived_quantities.is_passive_50_kpc"
   x:
@@ -184,7 +199,9 @@ stellar_mass_snia_rates_per_stellar_mass_passive_only_50:
     caption: Uses a 50 kpc 3D aperture.
     section: SNIa Rate
   observational_data:
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Smith2012_passive.hdf5
     - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2015_passive.hdf5
+    - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2017_passive.hdf5
 
 gas_metallicity_snia_rates_per_stellar_mass_active_only_50:
   type: "scatter"
@@ -200,7 +217,7 @@ gas_metallicity_snia_rates_per_stellar_mass_active_only_50:
     quantity: "derived_quantities.snia_rate_per_stellar_mass_50_kpc"
     units: "1/year/Solar_Mass"
     start: 1e-14
-    end: 1e-11
+    end: 3e-12
   median:
     plot: true
     log: true
@@ -214,7 +231,7 @@ gas_metallicity_snia_rates_per_stellar_mass_active_only_50:
       units: dimensionless 
   metadata:
     title: Gas metallicity-SNIa rate per stellar mass relation (active only, 50 kpc aperture)
-    caption: Uses a 50 kpc 3D aperture, active galaxies only.
+    caption: Uses a 50 kpc 3D aperture, active galaxies only with a stellar mass above 5x1e10 Msun.
     section: SNIa Rate
   observational_data:
     - filename: GalaxyGasMetallicitySNIaRatePerStellarMass/Graur2017.hdf5
@@ -252,6 +269,38 @@ star_formation_rates_snia_rates_per_stellar_mass_50:
     - filename: StarFormationRateSNIaRatePerStellarMass/Graur2015.hdf5
     - filename: StarFormationRateSNIaRatePerStellarMass/Graur2017.hdf5
 
+star_formation_rates_snia_rates_50:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.stellar_mass_is_bigger_than_5e10_msun_50_kpc"
+  x:
+    quantity: "apertures.sfr_gas_50_kpc"
+    units: "Solar_Mass/year"
+    start: 1e-3
+    end: 1e2
+  y:
+    quantity: "snia_rates.snia_rates_50_kpc"
+    units: "1/year"
+    start: 1e-6
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e-3
+      units: "Solar_Mass/year"
+    end:
+      value: 1e2
+      units: "Solar_Mass/year"
+  metadata:
+    title: SFR-SNIa rate relation (50 kpc aperture)
+    caption: Uses a 50 kpc 3D aperture, only select galaxies with a stellar mass above 5x1e10 Msun.
+    section: SNIa Rate
+  observational_data:
+    - filename: StarFormationRateSNIaRate/Smith2012.hdf5
+
 specific_star_formation_rates_snia_rates_per_stellar_mass_50:
   type: "scatter"
   legend_loc: "upper left"
@@ -279,7 +328,7 @@ specific_star_formation_rates_snia_rates_per_stellar_mass_50:
       units: "1/gigayear"
   metadata:
     title: sSFR-SNIa rate per stellar mass relation (50 kpc aperture)
-    caption: Uses a 50 kpc 3D aperture.
+    caption: Uses a 50 kpc 3D aperture, only select galaxies with a stellar mass above 5x1e10 Msun.
     section: SNIa Rate
   observational_data:
     - filename: SpecificStarFormationRateSNIaRatePerStellarMass/Graur2015.hdf5
