--- a/colibre/auto_plotter/snia_rates.yml
+++ b/colibre/auto_plotter/snia_rates.yml
@@ -11,7 +11,7 @@ stellar_mass_snia_rates_50:
     units: "1/year"
     start: 3e-8
     end: 1e-1
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -48,7 +48,7 @@ stellar_mass_snia_rates_active_only_50:
     units: "1/year"
     start: 3e-8
     end: 1e-1
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -83,7 +83,7 @@ stellar_mass_snia_rates_passive_only_50:
     units: "1/year"
     start: 3e-8
     end: 1e-1
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -115,7 +115,7 @@ stellar_mass_snia_rates_per_stellar_mass_50:
     units: "1/year/Solar_Mass"
     start: 3e-15
     end: 3e-12
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -153,7 +153,7 @@ stellar_mass_snia_rates_per_stellar_mass_active_only_50:
     units: "1/year/Solar_Mass"
     start: 3e-15
     end: 3e-12
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -189,7 +189,7 @@ stellar_mass_snia_rates_per_stellar_mass_passive_only_50:
     units: "1/year/Solar_Mass"
     start: 3e-15
     end: 3e-12
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -224,7 +224,7 @@ gas_metallicity_snia_rates_per_stellar_mass_active_only_50:
     units: "1/year/Solar_Mass"
     start: 1e-14
     end: 3e-12
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -256,7 +256,7 @@ star_formation_rates_snia_rates_per_stellar_mass_50:
     units: "1/year/Solar_Mass"
     start: 1e-14
     end: 3e-12
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -289,7 +289,7 @@ star_formation_rates_snia_rates_50:
     units: "1/year"
     start: 1e-6
     end: 1e-1
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -321,7 +321,7 @@ specific_star_formation_rates_snia_rates_per_stellar_mass_50:
     units: "1/year/Solar_Mass"
     start: 1e-14
     end: 3e-12
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -353,7 +353,7 @@ stellar_mass_snia_rates_30:
     units: "1/year"
     start: 1e-8
     end: 1e-1
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -385,7 +385,7 @@ stellar_mass_snia_rates_per_stellar_mass_30:
     units: "1/year/Solar_Mass"
     start: 1e-15
     end: 1e-11
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -419,7 +419,7 @@ stellar_mass_snia_rates_100:
     units: "1/year"
     start: 1e-8
     end: 1e-1
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
@@ -451,7 +451,7 @@ stellar_mass_snia_rates_per_stellar_mass_100:
     units: "1/year/Solar_Mass"
     start: 1e-15
     end: 1e-11
-  median:
+  mean:
     plot: true
     log: true
     adaptive: true
