--- a/colibre/auto_plotter/snia_rates.yml
+++ b/colibre/auto_plotter/snia_rates.yml
@@ -210,6 +210,43 @@ stellar_mass_snia_rates_per_stellar_mass_passive_only_50:
     - filename: GalaxyStellarMassSNIaRatePerStellarMass/Graur2017_passive.hdf5
 
 gas_metallicity_snia_rates_per_stellar_mass_active_only_50:
+  comment: "$M_\\star > 10^{10}$ $M_\\odot$ and active only"
+  comment_loc: "lower left"
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.stellar_mass_is_bigger_than_1e10_msun_active_50_kpc"
+  x:
+    quantity: "derived_quantities.gas_o_abundance_fromz_avglin_50_kpc"
+    units: dimensionless 
+    log: false
+    start: 8.4 
+    end: 9.4 
+  y:
+    quantity: "derived_quantities.snia_rate_per_stellar_mass_50_kpc"
+    units: "1/year/Solar_Mass"
+    start: 1e-14
+    end: 3e-12
+  mean:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 15
+    start:
+      value: 8.2 
+      units: dimensionless
+    end:
+      value: 9.5 
+      units: dimensionless 
+  metadata:
+    title: Gas metallicity-SNIa rate per stellar mass relation (active only, 50 kpc aperture)
+    caption: Uses a 50 kpc 3D aperture, active galaxies only with a stellar mass above 1e10 Msun.
+    section: SNIa Rate
+  observational_data:
+    - filename: GalaxyGasMetallicitySNIaRatePerStellarMass/Graur2017.hdf5
+
+gas_metallicity_snia_rates_per_stellar_mass_active_only_50_Mstar5e10:
+  comment: "$M_\\star > 5 \\times 10^{10}$ $M_\\odot$ and active only"
+  comment_loc: "lower left"
   type: "scatter"
   legend_loc: "upper left"
   selection_mask: "derived_quantities.stellar_mass_is_bigger_than_5e10_msun_active_50_kpc"
@@ -237,12 +274,49 @@ gas_metallicity_snia_rates_per_stellar_mass_active_only_50:
       units: dimensionless 
   metadata:
     title: Gas metallicity-SNIa rate per stellar mass relation (active only, 50 kpc aperture)
-    caption: Uses a 50 kpc 3D aperture, active galaxies only with a stellar mass above 5x1e10 Msun.
+    caption: Uses a 50 kpc 3D aperture, active galaxies only with a stellar mass above 5e10 Msun.
     section: SNIa Rate
   observational_data:
     - filename: GalaxyGasMetallicitySNIaRatePerStellarMass/Graur2017.hdf5
 
 star_formation_rates_snia_rates_per_stellar_mass_50:
+  comment: "$M_\\star > 10^{10}$ $M_\\odot$"
+  comment_loc: "lower left"
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.stellar_mass_is_bigger_than_1e10_msun_50_kpc"
+  x:
+    quantity: "apertures.sfr_gas_50_kpc"
+    units: "Solar_Mass/year"
+    start: 1e-3
+    end: 1e2
+  y:
+    quantity: "derived_quantities.snia_rate_per_stellar_mass_50_kpc"
+    units: "1/year/Solar_Mass"
+    start: 1e-14
+    end: 3e-12
+  mean:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e-3
+      units: "Solar_Mass/year"
+    end:
+      value: 1e2
+      units: "Solar_Mass/year"
+  metadata:
+    title: SFR-SNIa rate per stellar mass relation (50 kpc aperture)
+    caption: Uses a 50 kpc 3D aperture, only select galaxies with a stellar mass above 1e10 Msun.
+    section: SNIa Rate
+  observational_data:
+    - filename: StarFormationRateSNIaRatePerStellarMass/Graur2015.hdf5
+    - filename: StarFormationRateSNIaRatePerStellarMass/Graur2017.hdf5
+
+star_formation_rates_snia_rates_per_stellar_mass_50_Mstar5e10:
+  comment: "$M_\\star > 5 \\times 10^{10}$ $M_\\odot$"
+  comment_loc: "lower left"
   type: "scatter"
   legend_loc: "upper left"
   selection_mask: "derived_quantities.stellar_mass_is_bigger_than_5e10_msun_50_kpc"
@@ -269,7 +343,7 @@ star_formation_rates_snia_rates_per_stellar_mass_50:
       units: "Solar_Mass/year"
   metadata:
     title: SFR-SNIa rate per stellar mass relation (50 kpc aperture)
-    caption: Uses a 50 kpc 3D aperture, only select galaxies with a stellar mass above 5x1e10 Msun.
+    caption: Uses a 50 kpc 3D aperture, only select galaxies with a stellar mass above 5e10 Msun.
     section: SNIa Rate
   observational_data:
     - filename: StarFormationRateSNIaRatePerStellarMass/Graur2015.hdf5
@@ -278,7 +352,6 @@ star_formation_rates_snia_rates_per_stellar_mass_50:
 star_formation_rates_snia_rates_50:
   type: "scatter"
   legend_loc: "upper left"
-  selection_mask: "derived_quantities.stellar_mass_is_bigger_than_5e10_msun_50_kpc"
   x:
     quantity: "apertures.sfr_gas_50_kpc"
     units: "Solar_Mass/year"
@@ -302,12 +375,49 @@ star_formation_rates_snia_rates_50:
       units: "Solar_Mass/year"
   metadata:
     title: SFR-SNIa rate relation (50 kpc aperture)
-    caption: Uses a 50 kpc 3D aperture, only select galaxies with a stellar mass above 5x1e10 Msun.
+    caption: Uses a 50 kpc 3D aperture.
     section: SNIa Rate
   observational_data:
     - filename: StarFormationRateSNIaRate/Smith2012.hdf5
 
 specific_star_formation_rates_snia_rates_per_stellar_mass_50:
+  comment: "$M_\\star > 10^{10}$ $M_\\odot$"
+  comment_loc: "lower left"
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.stellar_mass_is_bigger_than_1e10_msun_50_kpc"
+  x:
+    quantity: "derived_quantities.specific_sfr_gas_50_kpc"
+    units: "1/gigayear"
+    start: 1e-3
+    end: 1e1
+  y:
+    quantity: "derived_quantities.snia_rate_per_stellar_mass_50_kpc"
+    units: "1/year/Solar_Mass"
+    start: 1e-14
+    end: 3e-12
+  mean:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e-3
+      units: "1/gigayear"
+    end:
+      value: 1e1
+      units: "1/gigayear"
+  metadata:
+    title: sSFR-SNIa rate per stellar mass relation (50 kpc aperture)
+    caption: Uses a 50 kpc 3D aperture, only select galaxies with a stellar mass above 1e10 Msun.
+    section: SNIa Rate
+  observational_data:
+    - filename: SpecificStarFormationRateSNIaRatePerStellarMass/Graur2015.hdf5
+    - filename: SpecificStarFormationRateSNIaRatePerStellarMass/Graur2017.hdf5
+
+specific_star_formation_rates_snia_rates_per_stellar_mass_50_Mstar5e10:
+  comment: "$M_\\star > 5 \\times 10^{10}$ $M_\\odot$"
+  comment_loc: "lower left"
   type: "scatter"
   legend_loc: "upper left"
   selection_mask: "derived_quantities.stellar_mass_is_bigger_than_5e10_msun_50_kpc"
@@ -334,7 +444,7 @@ specific_star_formation_rates_snia_rates_per_stellar_mass_50:
       units: "1/gigayear"
   metadata:
     title: sSFR-SNIa rate per stellar mass relation (50 kpc aperture)
-    caption: Uses a 50 kpc 3D aperture, only select galaxies with a stellar mass above 5x1e10 Msun.
+    caption: Uses a 50 kpc 3D aperture, only select galaxies with a stellar mass above 5e10 Msun.
     section: SNIa Rate
   observational_data:
     - filename: SpecificStarFormationRateSNIaRatePerStellarMass/Graur2015.hdf5
